src/app/globals.css
/* ... */
#play-btn svg {
  color: var(--main-color);
  width: 25px;
  height: 25px;
  margin-right: 10px;
}

#wave-skeleton {
  width: 110px;
  height: 30px;
}

#icon-skeleton {
  width: 28px;
  height: 28px;
  margin-right: 10px;
}

#credit a {
  text-decoration: underline;
}

#credit a:hover {
  opacity: 0.8;
}

.timeline {
  overflow: hidden;
  z-index: 4;
}

.timeline-active {
  border-bottom-left-radius: 50px;
  border-bottom-right-radius: 50px;
  /* border-bottom: 250px solid rgba(143, 151, 165, 1);
  border-left: 3px solid transparent;
  border-right: 4px solid transparent; */
}

.year-ctn {
  z-index: 0;
  gap: 10px;
}

.year-ctn .hr-line,
.year-ctn p {
  transition: all 0.5s ease;
}

.year-ctn .hr-line {
  height: 5px;
  width: 500px;
  background: linear-gradient(to right, rgba(3, 19, 21, 0), #031315 20%);
}

.year-ctn.active .hr-line {
  background: linear-gradient(
    to right,
    rgba(143, 151, 165, 0) 0,
    rgba(143, 151, 165, 1) 20%
  );
  scale: 1.1 1;
}

.year-ctn p {
  color: #031315;
  transform: rotate(-90deg);
}

.year-ctn.active p {
  color: rgba(143, 151, 165, 1);
}

.hero h1 span {
  display: inline-block;
  transform: translateY(-600%);
  color: var(--main-color);
  animation: drop 1.6s forwards;
  opacity: 0;
  animation-timing-function: linear;
}

#global-pause {
  box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.3);
}

.global-pause-icon {
  width: 25px;
  height: 25px;
}

@media screen and (max-width: 767px) {
  #hero-img {
    height: 100vh;
    height: 100svh;
    object-fit: cover;
    object-position: 67% center;
  }

  header {
    background: linear-gradient(
      to bottom,
      rgba(0, 0, 0, 0.9),
      rgba(0, 0, 0, 0)
    );
  }

  #hero-body-ctn {
    background: linear-gradient(to bottom, transparent, #0b0b0b);
    /* padding: 50px 4.15% 25px; */
  }

  .credit-body .bottom {
    width: 145px;
  }
  .song-ctn,
  .card {
    height: 245px;
  }

  #side-drawer {
    width: 60%;
  }
}

@media screen and (min-width: 768px) {
  header {
    height: 100px;
  }
  main {
    margin-top: -100px;
  }
  #hero-img {
    height: 100vh;
    object-fit: cover;
    object-position: center;
  }
  #side-drawer {
    max-width: 300px;
  }
  .timeline {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    width: 5px;
    background-color: #031315;
  }
  .timeline-active {
    height: 250px;
    /* border: 1px solid blue; */
    width: 100%;
    background: linear-gradient(
      to bottom,
      rgba(143, 151, 165, 0) 0,
      rgba(143, 151, 165, 1) 40%,
      rgba(143, 151, 165, 1) 100%
    );
  }
}

@media screen and (max-width: 1023px) {
  #hero-body-ctn {
    padding: 50px 4.15% 25px;
  }
  .img-ctn,
  .credit-body {
    width: 85%;
    margin-left: auto;
    margin-right: auto;
  }
  .signup-form h4 {
    max-width: 400px;
    margin-left: auto;
    margin-right: auto;
  }
  .song-ctn {
    width: 85%;
  }

  .slider-wrapper {
    display: grid;
    grid-template-columns: repeat(4, 100%);
    justify-content: start;
    gap: 75px;
    transition: transform 0.2s ease-in-out;
  }

  .slider-wrapper .card:last-child {
    display: none;
  }

  .song-ctn,
  .card {
    height: 600px;
  }
  .card {
    aspect-ratio: 0.7;
    width: auto;
    max-width: 100%;
    margin: 0 auto;
  }

  #music-ctn {
    width: 100%;
    height: 100%;
    justify-content: center;
  }

  .img-ctn > img {
    height: auto;
    object-fit: cover;
    width: 100%;
    aspect-ratio: 1;
    max-width: 300px;
    margin-left: auto;
    margin-right: auto;
  }

  .credit-body .bottom,
  .timeline,
  .year-ctn .hr-line {
    display: none;
  }
  .year-ctn {
    aspect-ratio: 0.7;
    height: 640px;
    width: auto;
    justify-content: flex-start;
  }

  .year-ctn p {
    color: var(--main-color);
    transform: rotate(-90deg);
    margin-left: -9%;
    margin-top: 50px;
    font-size: 16px;
    letter-spacing: 5px;
  }
  .mobile-slider-control {
    left: 0;
    right: 0;
    bottom: 0;
    margin: 0 auto;
    max-width: 300px;
    /* padding-left: 1.5rem; */
    /* padding-right: 1.5rem; */
  }
  .card .img-ctn {
    height: auto;
  }

  .card-body {
    padding-left: 0;
    padding-right: 0;
  }

  .arrow-ctn {
    transition: opacity 0.2s linear;
  }

  .arrow-ctn p {
    user-select: none;
  }

  .arrow-ctn.disabled {
    opacity: 0.2;
    cursor: no-drop;
  }

  .arrow-ctn.disabled:hover {
    opacity: 0.2;
  }

  .lyrics-wrapper .card-body {
    padding: 2.5em 2em;
    height: 530px;
  }

  .credit-wrapper .card-body {
    height: 100%;
  }

  .credit-wrapper .card-body #credit {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
    text-align: center;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .credit-body .bottom {
    width: 145px;
  }
  #wave-skeleton {
    width: 200px;
  }
}

@media screen and (min-width: 1024px) and (max-width: 1279px) {
  .timeline {
    left: 25px;
  }
  .year-ctn p {
    padding-bottom: 20px;
  }
  .year-ctn .hr-line {
    background: linear-gradient(to right, rgba(3, 19, 21, 0), #031315 10%);
  }
}

@media screen and (min-width: 1280px) and (max-width: 1535px) {
  .timeline {
    left: 50px;
  }

  .year-ctn p {
    padding-left: 20px;
  }
}
/* ... */

